--- a/style.css
+++ b/style.css
@@ -14,3 +14,35 @@ nav a {
     text-decoration: none;
     color: white;
 }
+
+article {
+    background-color: #3c3e3f;
+}
+
+article ul {
+    color: whitesmoke;
+}
+
+article ol {
+    color: whitesmoke;
+}
+
+a {
+    color: goldenrod;
+    text-decoration: none;
+}
+
+h1 {
+    text-align: center;
+    color: white;
+    font-size: 3rem;
+}
+
+.resource {
+    display: inline-block;
+}
+
+.link-list {
+    display: flex;
+    justify-content: center;
+}
