Add height to gallery images

--- a/style.css
+++ b/style.css
@@ -68,6 +68,11 @@ section {
         "four five six";
 }
 
+.gallery-image {
+    height: 500px;
+    width: auto;
+}
+
 #image-one {
     grid-area: one;
 }
